# qfat_assignment

./: .gitignore  1.3- Loser portfolio.py  1.4 - Long-short ind-mom.py  1.6 ready for merge.py  1.6.py  Assignment. Data Sorting.ipynb  Industry.csv  QFAT_1.5+rest.py  QFAT_1.5_Final.py  QFAT_assignment1_1.5.py  pyproject.toml  winners.ipynb
src/indmom/: __init__.py  main.py
